[package]
name = "wasm-rust-hash"
version = "0.3.0"
authors = ["lzghzr <me@lzzr.me>"]
edition = "2018"
license = "MIT"
description = "WebAssembly实现的Hash库"
repository = "https://github.com/lzghzr/wasm-rust-hash"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
hex = "0.4.3"
digest = "0.9.0"
crypto-mac = "0.11.1"
hmac = "0.11.0"

blake2 = "0.9.1"
blake3 = "1.0.0"
fsb = "0.0.2"
gost94 = "0.9.1"
groestl = "0.9.0"
k12 = "0.1.0"
md2 = "0.9.0"
md4 = "0.9.0"
md-5 = "0.9.1"
ripemd160 = "0.9.1"
ripemd256 = "0.1.0"
ripemd320 = "0.9.0"
sha-1 = "0.9.7"
sha2 = "0.9.5"
sha3 = "0.9.1"
shabal = "0.3.0"
sm3 = "0.3.0"
streebog = "0.9.2"
tiger = "0.1.0"
whirlpool = "0.9.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"
panic = 'abort'
